# modern-di-typer

./: .gitignore  CLAUDE.md  CONTEXT.md  Justfile  README.md  pyproject.toml
.github/workflows/: _checks.yml  ci.yml  publish.yml  release.yml
architecture/: README.md  injection.md  scopes.md
modern_di_typer/: __init__.py  main.py
planning/: README.md  deferred.md  index.py
planning/_templates/: change.md  design.md
planning/changes/: 2026-07-13.01-adopt-integration-kit.md  2026-07-20.01-open-request-container.md
planning/changes/2026-06-25.01-action-scope/: design.md  plan.md
planning/decisions/: 2026-06-25-action-scope-multiple-actions-per-command.md
planning/releases/: 2.1.0.md  2.1.1.md  2.2.0.md  2.3.0.md  3.0.0.md
tests/: conftest.py  dependencies.py  test_commands.py
